removes jquery from instructions and project code

--- a/w02/d02/m3-css-responsive-design/solution-code/assets/index.html
+++ b/w02/d02/m3-css-responsive-design/solution-code/assets/index.html
@@ -19,13 +19,13 @@
         <li>
           <ul>
             <li><a href="#"></a></li>
-            <li><a href="/">Desktop</a></li>
-            <li><a href="/">Phone5</a></li>
-            <li><a href="/">Phone4</a></li>
-            <li><a href="/">Phone3</a></li>
-            <li><a href="/">iPad</a></li>
-            <li><a href="/">iPad2</a></li>
-            <li><a href="/">iWatch</a></li>
+            <li class="hidden"><a href="/">Desktop</a></li>
+            <li class="hidden"><a href="/">Phone5</a></li>
+            <li class="hidden"><a href="/">Phone4</a></li>
+            <li class="hidden"><a href="/">Phone3</a></li>
+            <li class="hidden"><a href="/">iPad</a></li>
+            <li class="hidden"><a href="/">iPad2</a></li>
+            <li class="hidden"><a href="/">iWatch</a></li>
           </ul>
         </li>
       </ul>
