--- a/w02/d02/m3-css-responsive-design/starter-code/index.html
+++ b/w02/d02/m3-css-responsive-design/starter-code/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Responsive design</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-  <script type="text/javascript" src="./js/app.js"></script>
   <link rel="stylesheet" type="text/css" href="./stylesheets/reset.css">
   <link rel="stylesheet" type="text/css" href="./stylesheets/style.css">
 </head>
@@ -42,5 +42,6 @@
       <p>But it has to be done now...</p>
     </div>
   </main>
+  <script type="text/javascript" src="./js/app.js"></script>
 </body>
 </html>
