--- a/w02/d03/m3-bootstrap/starter-code/before-bootstrap/index.html
+++ b/w02/d03/m3-bootstrap/starter-code/before-bootstrap/index.html
@@ -1,54 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Title</title>
+  <title>Bootstrap</title>
   <meta charset="utf-8" />
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- include bootstrap -->
-  <link rel="stylesheet" type="text/css" href="#">
 </head>
 <body>
   <h1>Before Bootstrap</h1>
-  <form action="">
-    <input type="text" placeholder="Search Term">
-    <button type="submit">
+  <form>
+    <input type="text" placeholder="query"/>
+    <button type="submit">Search</button>
   </form>
-  <table class="table">
-    <!-- table head -->
-    <thead>
-      <!-- row -->
-      <tr> 
-        <th>#</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Username</th>
-      </tr>
-    </thead>
-    <!-- table body -->
-    <tbody class="table-striped">
-      <!-- row -->
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
-      <!-- row -->
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <!-- row -->
-      <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
-      </tr>
-    </tbody>
-  </table>
+  <section>
+    <div>
+      <table>
+        <!-- table head -->
+        <thead>
+          <!-- row -->
+          <tr> 
+            <th>#</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Username</th>
+          </tr>
+        </thead>
+        <!-- table body -->
+        <tbody>
+          <!-- row -->
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <!-- row -->
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <!-- row -->
+          <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <img src="http://i.giphy.com/hoaFB12CCE824.gif" alt="">
+  </section>
 </body>
 </html>
