adds all before pull

--- a/w01/d02/m2-css-selector-basics/starter-code/index.html
+++ b/w01/d02/m2-css-selector-basics/starter-code/index.html
@@ -1,8 +1,22 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
-  <head>
-  <title>Intro to CSS</title>
-  </head>
+<head>
+	<title>css practice</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <body>
+<ul>
+	<li class="mammal" id="mouse">mouse</li>
+	<li class="bird" id="canary">canary</li>
+	<li class"bird" id="penguin">penguin</li>
+	<li class="fish" id="salmon">salmon</li>
+	<li class="mammal" id="cat">cat</li>
+	<li class="fish" id="goldfish">goldfish</li>
+	<li class="mammal" id="dog">dog</li>
+	<li class="mammal" id="sheep">sheep</li>
+	<li class="bird" id="parakeet">parakeet</li>
+	<li class="fish" id="tuna">tuna</li>
+</ul>
+
 </body>
 </html>
