--- a/w01/d02/m4-CSS-lab/solution-code/index.html
+++ b/w01/d02/m4-CSS-lab/solution-code/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
-  <link href="css/main.css" rel="stylesheet">
+  <link href="../css/main.css" rel="stylesheet">
 </head>
 <body>
   <div class="page">
