--- a/w01/d02/m4-CSS-lab/starter-code/index.html
+++ b/w01/d02/m4-CSS-lab/starter-code/index.html
@@ -2,30 +2,40 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  Instagram
+  <h1> Instagram </h1>
 
-  Capture and Share the World's Moments
+  <div id="copy">
+    <h2>Capture and Share the World's Moments </h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <p> Instagram is a <b> fast, beautiful </b> and <b>fun</b> way to share your life with friends and family. </p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
 
-  Oh yeah, did we mention it's free?
+    <p> Oh yeah, did we mention it's free? </p>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  <button> Download on the App Store </button>
+  <button> Get it on Google Play </button>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<footer>
+    <ul class = "footer"> 
+      <li> About Us </li>
+      <li> Support </li> 
+      <li> Blog </li>
+      <li> Press </li>
+      <li> API </li>
+      <li> Jobs </li>
+      <li> Privacy </li>
+      <li> Terms </li>
 
-  &copy; 2014 Instagram
+     <li>  &copy; 2014 Instagram </li>
+
+    </ul>
+
+</footer>
+
 </body>
 </html>
