add in class examples

--- a/w02/d03/m3-bootstrap/starter-code/before-bootstrap/index.html
+++ b/w02/d03/m3-bootstrap/starter-code/before-bootstrap/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8" />
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="sweet-css-lib.css">
 </head>
 <body>
-  <h1>Before Bootstrap</h1>
+  <h1 class="shout shadow">Before Bootstrap</h1>
   <form>
     <input type="text" placeholder="query"/>
     <button type="submit">Search</button>
@@ -51,7 +52,7 @@
         </tbody>
       </table>
     </div>
-    <img src="http://i.giphy.com/hoaFB12CCE824.gif" alt="">
+    <img class="invert" src="http://i.giphy.com/hoaFB12CCE824.gif" alt="">
   </section>
 </body>
 </html>
