refactor on load

--- a/w02/d04/m4-ajax-lab/solution-code/index.html
+++ b/w02/d04/m4-ajax-lab/solution-code/index.html
@@ -20,4 +20,7 @@
       <!-- <p>M 4.2 - 1km ESE of Fontana, California / 123 hours ago </p> -->
     </div>
 </body>
+<script type="text/javascript">
+  init();
+</script>
 </html>
