--- a/w11/d02/m1-react/starter-code/index.html
+++ b/w11/d02/m1-react/starter-code/index.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h1>Make React!</h1>
+    <div id="mood-tracker-component"></div>
+    <!-- <div id="profile-pic-component"></div>
+    <div id="posts-container"></div> -->
+    <!-- <div id="hello-world-component"></div>
+    <div id="greeting-component"></div> -->
   </body>
 </html>
